# fair-data-schema

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FAIR_SCHEMA.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
cv/: entity-roles-v1.json  entity-types-v1.json
docs/: make.bat
docs/source/: background.md  cdif_comparison.md  changelog.md  conf.py  index.rst  python-sdk.md
docs/source/api/: fair_data_schema.rst  hvd_schema.rst
docs/source/cookbook/: complex-data-product.md  data-products.md  enum-to-fair-coded-values.md  index.md  variable-cascade.md
docs/source/examples/: complex-data-product.json  complex-data-product.md  data-products.md  enum-to-fair-coded-values.json  enum-to-fair-coded-values.md  (+6 more)
examples/: complex-data-product.data.json  complex-data-product.json  complex-data-product.md  entity-collaboration.json  entity-collaboration.md  enum-to-fair-coded-values.json  enum-to-fair-coded-values.md  flat-hierarchy-product.json  mechanism-1-annotations.json  mechanism-2-vocabulary.json  mechanism-3-dialect.json  mechanism-4-refinements.json  time-series-product.json  variable-cascade.json  variable-cascade.md
schemas/: index.json
schemas/0.1.0/: README.md  index.json
schemas/dev/: README.md
scripts/: build_dist.py  generate_models.py
scripts/templates/: models.py.j2
src/fair_data_schema/: __init__.py  cli.py  registry.py  validator.py
tests/: conftest.py  test_examples.py  test_meta_schema.py  test_models.py  test_vocabularies.py
(+34 files in other folders)
